fix configs and flight plan links

--- a/src/data/jnsq_configs.json
+++ b/src/data/jnsq_configs.json
@@ -13,10 +13,10 @@
 		"semiMajorAxis":"14522400000",
 		"eccentricity":"0.2",
 		"inclination":"7",
-		"argOfPeriapsis":"7",
-		"ascNodeLongitude":"7",
-		"meanAnomalyEpoch":"7",
-		"epoch":"7",
+		"argOfPeriapsis":"15",
+		"ascNodeLongitude":"70",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.933,0.714,0.533,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -29,10 +29,10 @@
 		"semiMajorAxis":"27131000000",
 		"eccentricity":"0.01",
 		"inclination":"2.1",
-		"argOfPeriapsis":"2.1",
-		"ascNodeLongitude":"2.1",
-		"meanAnomalyEpoch":"2.1",
-		"epoch":"2.1",
+		"argOfPeriapsis":"45",
+		"ascNodeLongitude":"15",
+		"meanAnomalyEpoch":"5.7",
+		"epoch":"0",
 		"color":"0.424,0.125,0.894,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Eve"
@@ -44,10 +44,10 @@
 		"semiMajorAxis":"86920000",
 		"eccentricity":"0.55",
 		"inclination":"12",
-		"argOfPeriapsis":"12",
-		"ascNodeLongitude":"12",
-		"meanAnomalyEpoch":"12",
-		"epoch":"12",
+		"argOfPeriapsis":"10",
+		"ascNodeLongitude":"80",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.635,0.494,0.431,0.5",
 		"referenceBody":"Eve",
 		"templateName":"Gilly"
@@ -74,10 +74,10 @@
 		"geeASL":"0.145",
 		"eccentricity":"0.005",
 		"inclination":"0.5",
-		"argOfPeriapsis":"0.5",
-		"ascNodeLongitude":"0.5",
-		"meanAnomalyEpoch":"0.5",
-		"epoch":"0.5",
+		"argOfPeriapsis":"165",
+		"ascNodeLongitude":"45",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.612,0.627,0.706,0.5",
 		"referenceBody":"Kerbin",
 		"templateName":"Mun"
@@ -88,10 +88,10 @@
 		"geeASL":"0.05",
 		"eccentricity":"0.03",
 		"inclination":"6",
-		"argOfPeriapsis":"6",
-		"ascNodeLongitude":"6",
-		"meanAnomalyEpoch":"6",
-		"epoch":"6",
+		"argOfPeriapsis":"315",
+		"ascNodeLongitude":"75",
+		"meanAnomalyEpoch":"0.5235987755982988",
+		"epoch":"0",
 		"color":"0.6,0.5,0.4,0.5",
 		"referenceBody":"Kerbin",
 		"templateName":"Minmus"
@@ -104,10 +104,10 @@
 		"semiMajorAxis":"57189100000",
 		"eccentricity":"0.051",
 		"inclination":"0.06",
-		"argOfPeriapsis":"0.06",
-		"ascNodeLongitude":"0.06",
-		"meanAnomalyEpoch":"0.06",
-		"epoch":"0.06",
+		"argOfPeriapsis":"345",
+		"ascNodeLongitude":"135.5",
+		"meanAnomalyEpoch":"0.9",
+		"epoch":"0",
 		"color":"0.639,0.247,0.157,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Duna"
@@ -119,10 +119,10 @@
 		"semiMajorAxis":"36680000",
 		"eccentricity":"0.03",
 		"inclination":"0.2",
-		"argOfPeriapsis":"0.2",
-		"ascNodeLongitude":"0.2",
-		"meanAnomalyEpoch":"0.2",
-		"epoch":"0.2",
+		"argOfPeriapsis":"345",
+		"ascNodeLongitude":"90",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.522,0.541,0.604,0.5",
 		"referenceBody":"Duna",
 		"templateName":"Ike"
@@ -134,10 +134,10 @@
 		"semiMajorAxis":"94080000000",
 		"eccentricity":"0.07",
 		"inclination":"3",
-		"argOfPeriapsis":"3",
-		"ascNodeLongitude":"3",
-		"meanAnomalyEpoch":"3",
-		"epoch":"3",
+		"argOfPeriapsis":"310",
+		"ascNodeLongitude":"30",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.55,0.35,0.15,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -149,10 +149,10 @@
 		"semiMajorAxis":"4770000",
 		"eccentricity":"0.01",
 		"inclination":"10",
-		"argOfPeriapsis":"10",
-		"ascNodeLongitude":"10",
-		"meanAnomalyEpoch":"10",
-		"epoch":"10",
+		"argOfPeriapsis":"90",
+		"ascNodeLongitude":"120",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.5,0.5,0.5,0.5",
 		"referenceBody":"Edna",
 		"templateName":"Moho"
@@ -164,10 +164,10 @@
 		"semiMajorAxis":"112687000000",
 		"eccentricity":"0.145",
 		"inclination":"5",
-		"argOfPeriapsis":"5",
-		"ascNodeLongitude":"5",
-		"meanAnomalyEpoch":"5",
-		"epoch":"5",
+		"argOfPeriapsis":"90",
+		"ascNodeLongitude":"280",
+		"meanAnomalyEpoch":"3.9",
+		"epoch":"0",
 		"color":"0.353,0.267,0.196,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Dres"
@@ -180,10 +180,10 @@
 		"semiMajorAxis":"189765000000",
 		"eccentricity":"0.05",
 		"inclination":"1.304",
-		"argOfPeriapsis":"1.304",
-		"ascNodeLongitude":"1.304",
-		"meanAnomalyEpoch":"1.304",
-		"epoch":"1.304",
+		"argOfPeriapsis":"30",
+		"ascNodeLongitude":"52",
+		"meanAnomalyEpoch":"0.6",
+		"epoch":"0",
 		"color":"0.329,0.522,0.075,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -196,10 +196,10 @@
 		"semiMajorAxis":"87640000",
 		"eccentricity":"0.01",
 		"inclination":"0.2",
-		"argOfPeriapsis":"0.2",
-		"ascNodeLongitude":"0.2",
-		"meanAnomalyEpoch":"0.2",
-		"epoch":"0.2",
+		"argOfPeriapsis":"120",
+		"ascNodeLongitude":"120",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.267,0.337,0.612,0.5",
 		"referenceBody":"Jool",
 		"templateName":"Laythe"
@@ -211,10 +211,10 @@
 		"semiMajorAxis":"160230000",
 		"eccentricity":"0.03",
 		"inclination":"0.3",
-		"argOfPeriapsis":"0.3",
-		"ascNodeLongitude":"0.3",
-		"meanAnomalyEpoch":"0.3",
-		"epoch":"0.3",
+		"argOfPeriapsis":"270",
+		"ascNodeLongitude":"90",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.431,0.608,0.706,0.5",
 		"referenceBody":"Jool",
 		"templateName":"Vall"
@@ -227,10 +227,10 @@
 		"semiMajorAxis":"292950000",
 		"eccentricity":"0.01",
 		"inclination":"0.1",
-		"argOfPeriapsis":"0.1",
-		"ascNodeLongitude":"0.1",
-		"meanAnomalyEpoch":"0.1",
-		"epoch":"0.1",
+		"argOfPeriapsis":"285",
+		"ascNodeLongitude":"150",
+		"meanAnomalyEpoch":"4.71238898038469",
+		"epoch":"0",
 		"color":"0.827,0.667,0.667,0.5",
 		"referenceBody":"Jool",
 		"templateName":"Tylo"
@@ -241,6 +241,8 @@
 		"geeASL":"0.05",
 		"semiMajorAxis":"582970000",
 		"eccentricity":"0.235",
+		"meanAnomalyEpoch":"NaN",
+		"epoch":"0",
 		"color":"0.366,0.315,0.248,0.5",
 		"referenceBody":"Jool",
 		"templateName":"Bop"
@@ -252,10 +254,10 @@
 		"semiMajorAxis":"739460000",
 		"eccentricity":"0.17085",
 		"inclination":"4.25",
-		"argOfPeriapsis":"4.25",
-		"ascNodeLongitude":"4.25",
-		"meanAnomalyEpoch":"4.25",
-		"epoch":"4.25",
+		"argOfPeriapsis":"15",
+		"ascNodeLongitude":"2",
+		"meanAnomalyEpoch":"1.8",
+		"epoch":"0",
 		"color":"0.863,0.894,0.675,0.5",
 		"referenceBody":"Jool",
 		"templateName":"Pol"
@@ -268,10 +270,10 @@
 		"semiMajorAxis":"359571000000",
 		"eccentricity":"0.03",
 		"inclination":"1.7",
-		"argOfPeriapsis":"1.7",
-		"ascNodeLongitude":"1.7",
-		"meanAnomalyEpoch":"1.7",
-		"epoch":"1.7",
+		"argOfPeriapsis":"75",
+		"ascNodeLongitude":"80",
+		"meanAnomalyEpoch":"3.3",
+		"epoch":"0",
 		"color":"0.3,0.55,0.8,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -283,10 +285,10 @@
 		"semiMajorAxis":"58600000",
 		"eccentricity":"0.02",
 		"inclination":"1.5",
-		"argOfPeriapsis":"1.5",
-		"ascNodeLongitude":"1.5",
-		"meanAnomalyEpoch":"1.5",
-		"epoch":"1.5",
+		"argOfPeriapsis":"180",
+		"ascNodeLongitude":"60",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.7,0.6,0.5,0.5",
 		"referenceBody":"Lindor",
 		"templateName":"Moho"
@@ -298,10 +300,10 @@
 		"semiMajorAxis":"107140000",
 		"eccentricity":"0.01",
 		"inclination":"0.25",
-		"argOfPeriapsis":"0.25",
-		"ascNodeLongitude":"0.25",
-		"meanAnomalyEpoch":"0.25",
-		"epoch":"0.25",
+		"argOfPeriapsis":"30",
+		"ascNodeLongitude":"120",
+		"meanAnomalyEpoch":"4.71238898038469",
+		"epoch":"0",
 		"color":"0.6,0.7,0.5,0.5",
 		"referenceBody":"Lindor",
 		"templateName":"Moho"
@@ -314,10 +316,10 @@
 		"semiMajorAxis":"187500000",
 		"eccentricity":"0.025",
 		"inclination":"0.75",
-		"argOfPeriapsis":"0.75",
-		"ascNodeLongitude":"0.75",
-		"meanAnomalyEpoch":"0.75",
-		"epoch":"0.75",
+		"argOfPeriapsis":"60",
+		"ascNodeLongitude":"150",
+		"meanAnomalyEpoch":"1.5707963267948966",
+		"epoch":"0",
 		"color":"0.8,0.5,0.2,0.5",
 		"referenceBody":"Lindor",
 		"templateName":"Moho"
@@ -330,10 +332,10 @@
 		"semiMajorAxis":"309380000",
 		"eccentricity":"0.03",
 		"inclination":"0.5",
-		"argOfPeriapsis":"0.5",
-		"ascNodeLongitude":"0.5",
-		"meanAnomalyEpoch":"0.5",
-		"epoch":"0.5",
+		"argOfPeriapsis":"105",
+		"ascNodeLongitude":"90",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.5,0.6,0.7,0.5",
 		"referenceBody":"Lindor",
 		"templateName":"Moho"
@@ -345,10 +347,10 @@
 		"semiMajorAxis":"575680000",
 		"eccentricity":"0.04",
 		"inclination":"1",
-		"argOfPeriapsis":"1",
-		"ascNodeLongitude":"1",
-		"meanAnomalyEpoch":"1",
-		"epoch":"1",
+		"argOfPeriapsis":"285",
+		"ascNodeLongitude":"180",
+		"meanAnomalyEpoch":"1.5707963267948966",
+		"epoch":"0",
 		"color":"0.7,0.5,0.6,0.5",
 		"referenceBody":"Lindor",
 		"templateName":"Moho"
@@ -361,10 +363,10 @@
 		"semiMajorAxis":"471171300000",
 		"eccentricity":"0.26",
 		"inclination":"6.15",
-		"argOfPeriapsis":"6.15",
-		"ascNodeLongitude":"6.15",
-		"meanAnomalyEpoch":"6.15",
-		"epoch":"6.15",
+		"argOfPeriapsis":"260",
+		"ascNodeLongitude":"50",
+		"meanAnomalyEpoch":"3.54",
+		"epoch":"0",
 		"color":"0.408,0.416,0.416,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Eeloo"
@@ -376,10 +378,10 @@
 		"semiMajorAxis":"31800000",
 		"eccentricity":"0.05",
 		"inclination":"10",
-		"argOfPeriapsis":"10",
-		"ascNodeLongitude":"10",
-		"meanAnomalyEpoch":"10",
-		"epoch":"10",
+		"argOfPeriapsis":"270",
+		"ascNodeLongitude":"100",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.7,0.6,0.5,0.5",
 		"referenceBody":"Eeloo",
 		"templateName":"Moho"
@@ -391,10 +393,10 @@
 		"semiMajorAxis":"64670000",
 		"eccentricity":"0.025",
 		"inclination":"9.5",
-		"argOfPeriapsis":"9.5",
-		"ascNodeLongitude":"9.5",
-		"meanAnomalyEpoch":"9.5",
-		"epoch":"9.5",
+		"argOfPeriapsis":"210",
+		"ascNodeLongitude":"105",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.4,0.3,0.2,0.5",
 		"referenceBody":"Eeloo",
 		"templateName":"Moho"
@@ -406,10 +408,10 @@
 		"semiMajorAxis":"527129000000",
 		"eccentricity":"0.1",
 		"inclination":"4",
-		"argOfPeriapsis":"4",
-		"ascNodeLongitude":"4",
-		"meanAnomalyEpoch":"4",
-		"epoch":"4",
+		"argOfPeriapsis":"175",
+		"ascNodeLongitude":"165",
+		"meanAnomalyEpoch":"4.7",
+		"epoch":"0",
 		"color":"0.55,0.35,0.45,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -422,10 +424,10 @@
 		"semiMajorAxis":"1712000000000",
 		"eccentricity":"0.35",
 		"inclination":"20",
-		"argOfPeriapsis":"20",
-		"ascNodeLongitude":"20",
-		"meanAnomalyEpoch":"20",
-		"epoch":"20",
+		"argOfPeriapsis":"150",
+		"ascNodeLongitude":"90",
+		"meanAnomalyEpoch":"2.5",
+		"epoch":"0",
 		"color":"0.3,0.5,0.5,0.5",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -437,10 +439,10 @@
 		"semiMajorAxis":"55880000",
 		"eccentricity":"0.01",
 		"inclination":"0.5",
-		"argOfPeriapsis":"0.5",
-		"ascNodeLongitude":"0.5",
-		"meanAnomalyEpoch":"0.5",
-		"epoch":"0.5",
+		"argOfPeriapsis":"345",
+		"ascNodeLongitude":"180",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.6,0.7,0.5,0.5",
 		"referenceBody":"Nara",
 		"templateName":"Moho"
@@ -452,10 +454,10 @@
 		"semiMajorAxis":"125980000",
 		"eccentricity":"0.015",
 		"inclination":"0.2",
-		"argOfPeriapsis":"0.2",
-		"ascNodeLongitude":"0.2",
-		"meanAnomalyEpoch":"0.2",
-		"epoch":"0.2",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"270",
+		"meanAnomalyEpoch":"3.141592653589793",
+		"epoch":"0",
 		"color":"0.5,0.6,0.7,0.5",
 		"referenceBody":"Nara",
 		"templateName":"Moho"
@@ -467,10 +469,10 @@
 		"semiMajorAxis":"751900000",
 		"eccentricity":"0.4",
 		"inclination":"17",
-		"argOfPeriapsis":"17",
-		"ascNodeLongitude":"17",
-		"meanAnomalyEpoch":"17",
-		"epoch":"17",
+		"argOfPeriapsis":"100",
+		"ascNodeLongitude":"95",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.7,0.6,0.5,0.5",
 		"referenceBody":"Nara",
 		"templateName":"Moho"
