--- a/src/data/ksrss_configs.json
+++ b/src/data/ksrss_configs.json
@@ -2,6 +2,7 @@
 	{
 		"name":"Sun",
 		"radius":"87200000",
+		"stdGravParam":"1.18222E+18",
 		"templateName":"Sun"
 	},
 	{
@@ -11,10 +12,9 @@
 		"semiMajorAxis":"5453849467.49746",
 		"eccentricity":"0.2056187266319207",
 		"inclination":"7.01",
-		"argOfPeriapsis":"7.01",
-		"ascNodeLongitude":"7.01",
-		"meanAnomalyEpoch":"7.01",
-		"epoch":"7.01",
+		"argOfPeriapsis":"66.90371044151551",
+		"ascNodeLongitude":"10.86541167564728",
+		"meanAnomalyEpoch":"5.553920558995985",
 		"color":"0.321, 0.317, 0.352, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Mun"
@@ -22,14 +22,14 @@
 	{
 		"name":"Venus",
 		"radius":"569693",
+		"atmosphereHeight":"68000",
 		"geeASL":"0.904",
 		"semiMajorAxis":"10191142285.7852",
 		"eccentricity":"0.006810339650842032",
 		"inclination":"3.39458",
-		"argOfPeriapsis":"3.39458",
-		"ascNodeLongitude":"3.39458",
-		"meanAnomalyEpoch":"3.39458",
-		"epoch":"3.39458",
+		"argOfPeriapsis":"123.7121294282329",
+		"ascNodeLongitude":"7.981603378781639",
+		"meanAnomalyEpoch":"5.432267392125204",
 		"color":"0.701, 0.384, 0.16, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Duna"
@@ -37,14 +37,14 @@
 	{
 		"name":"Earth",
 		"radius":"600000",
+		"atmosphereHeight":"69000",
 		"stdGravParam":"3.5316000e+12",
 		"semiMajorAxis":"14089118586.40445",
 		"eccentricity":"0.01609636160505683",
 		"inclination":"0",
-		"argOfPeriapsis":"0",
-		"ascNodeLongitude":"0",
-		"meanAnomalyEpoch":"0",
-		"epoch":"0",
+		"argOfPeriapsis":"102.9720683296131",
+		"ascNodeLongitude":"359.9965004168758",
+		"meanAnomalyEpoch":"6.231885654519576",
 		"color":"0.0,0.278,0.388,1.0",
 		"referenceBody":"Sun",
 		"templateName":"Kerbin"
@@ -56,10 +56,9 @@
 		"semiMajorAxis":"36194051.4005186",
 		"eccentricity":"0.05328149353682574",
 		"inclination":"28.36267790798491",
-		"argOfPeriapsis":"28.36267790798491",
-		"ascNodeLongitude":"28.36267790798491",
-		"meanAnomalyEpoch":"28.36267790798491",
-		"epoch":"28.36267790798491",
+		"argOfPeriapsis":"199.7640930160823",
+		"ascNodeLongitude":"2.296616161126016",
+		"meanAnomalyEpoch":"3.8868698006324554",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Earth",
 		"templateName":"Mun"
@@ -71,10 +70,9 @@
 		"semiMajorAxis":"15956024156.0549",
 		"eccentricity":"0.206077710724101",
 		"inclination":"5.8837",
-		"argOfPeriapsis":"5.8837",
-		"ascNodeLongitude":"5.8837",
-		"meanAnomalyEpoch":"5.8837",
-		"epoch":"5.8837",
+		"argOfPeriapsis":"66.43350812884559",
+		"ascNodeLongitude":"0.443573085524234",
+		"meanAnomalyEpoch":"237.7027941664437",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Gilly"
@@ -82,14 +80,14 @@
 	{
 		"name":"Mars",
 		"radius":"317932",
+		"atmosphereHeight":"58000",
 		"geeASL":"0.379",
 		"semiMajorAxis":"21468233185.3434",
 		"eccentricity":"0.09326110278323557",
 		"inclination":"1.85",
-		"argOfPeriapsis":"1.85",
-		"ascNodeLongitude":"1.85",
-		"meanAnomalyEpoch":"1.85",
-		"epoch":"1.85",
+		"argOfPeriapsis":"332.1022655295414",
+		"ascNodeLongitude":"3.351911063089117",
+		"meanAnomalyEpoch":"2.9564361325350452",
 		"color":"0.631, 0.388, 0.192, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Duna"
@@ -101,10 +99,9 @@
 		"semiMajorAxis":"1766471.613703651",
 		"eccentricity":"0.01539938155583979",
 		"inclination":"1.093",
-		"argOfPeriapsis":"1.093",
-		"ascNodeLongitude":"1.093",
-		"meanAnomalyEpoch":"1.093",
-		"epoch":"1.093",
+		"argOfPeriapsis":"357.7759243021914",
+		"ascNodeLongitude":"46.48212553464923",
+		"meanAnomalyEpoch":"0.12540401573484683",
 		"color":"0.56, 0.454, 0.388, 1.0",
 		"referenceBody":"Mars",
 		"templateName":"Bop"
@@ -116,10 +113,9 @@
 		"semiMajorAxis":"4418416.95512676",
 		"eccentricity":"0.0003294680798661700",
 		"inclination":"0.93",
-		"argOfPeriapsis":"0.93",
-		"ascNodeLongitude":"0.93",
-		"meanAnomalyEpoch":"0.93",
-		"epoch":"0.93",
+		"argOfPeriapsis":"263.8963868784089",
+		"ascNodeLongitude":"47.51893570799763",
+		"meanAnomalyEpoch":"5.646210530657005",
 		"color":"0.462, 0.372, 0.313, 1.0",
 		"referenceBody":"Mars",
 		"templateName":"Bop"
@@ -131,10 +127,9 @@
 		"semiMajorAxis":"33278039536.9333",
 		"eccentricity":"0.0902068412255369",
 		"inclination":"5.58",
-		"argOfPeriapsis":"5.58",
-		"ascNodeLongitude":"5.58",
-		"meanAnomalyEpoch":"5.58",
-		"epoch":"5.58",
+		"argOfPeriapsis":"236.445369158826",
+		"ascNodeLongitude":"18.1671232653234",
+		"meanAnomalyEpoch":"1.0657102610896119",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Eeloo"
@@ -146,10 +141,9 @@
 		"semiMajorAxis":"38965790385.4938",
 		"eccentricity":"0.079363494880566",
 		"inclination":"10.62",
-		"argOfPeriapsis":"10.62",
-		"ascNodeLongitude":"10.62",
-		"meanAnomalyEpoch":"10.62",
-		"epoch":"10.62",
+		"argOfPeriapsis":"129.19102663711",
+		"ascNodeLongitude":"23.4501727740666",
+		"meanAnomalyEpoch":"1.0500332058738224",
 		"color":"0.5, 0.5, 0.5, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -161,10 +155,9 @@
 		"semiMajorAxis":"64752126378.6618",
 		"eccentricity":"0.6410",
 		"inclination":"7.0405",
-		"argOfPeriapsis":"7.0405",
-		"ascNodeLongitude":"7.0405",
-		"meanAnomalyEpoch":"7.0405",
-		"epoch":"7.0405",
+		"argOfPeriapsis":"12.78",
+		"ascNodeLongitude":"27.71613321356495",
+		"meanAnomalyEpoch":"1.9378570079563613",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Gilly"
@@ -172,14 +165,14 @@
 	{
 		"name":"Jupiter",
 		"radius":"6533528",
+		"atmosphereHeight":"732000",
 		"geeASL":"2.358",
 		"semiMajorAxis":"73289596784.6822",
 		"eccentricity":"0.04872660654702194",
 		"inclination":"1.31",
-		"argOfPeriapsis":"1.31",
-		"ascNodeLongitude":"1.31",
-		"meanAnomalyEpoch":"1.31",
-		"epoch":"1.31",
+		"argOfPeriapsis":"10.75642751202877",
+		"ascNodeLongitude":"3.262077289923354",
+		"meanAnomalyEpoch":"5.281038885954535",
 		"color":"0.749, 0.592, 0.4, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -191,10 +184,9 @@
 		"semiMajorAxis":"39745554.2026",
 		"eccentricity":"0.003545858426216978",
 		"inclination":"0.05",
-		"argOfPeriapsis":"0.05",
-		"ascNodeLongitude":"0.05",
-		"meanAnomalyEpoch":"0.05",
-		"epoch":"0.05",
+		"argOfPeriapsis":"231.2703460977786",
+		"ascNodeLongitude":"358.0466431678460",
+		"meanAnomalyEpoch":"3.4091064061869685",
 		"color":"0.647, 0.631, 0.364, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -206,10 +198,9 @@
 		"semiMajorAxis":"63218462.7559",
 		"eccentricity":"0.009511727119926178",
 		"inclination":"0.47",
-		"argOfPeriapsis":"0.47",
-		"ascNodeLongitude":"0.47",
-		"meanAnomalyEpoch":"0.47",
-		"epoch":"0.47",
+		"argOfPeriapsis":"53.13210737539627",
+		"ascNodeLongitude":"358.9360081847504",
+		"meanAnomalyEpoch":"4.821737415499958",
 		"color":"0.776, 0.78, 0.678, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -221,10 +212,9 @@
 		"semiMajorAxis":"100849827.547045018",
 		"eccentricity":"0.001190086418361844",
 		"inclination":"0.2",
-		"argOfPeriapsis":"0.2",
-		"ascNodeLongitude":"0.2",
-		"meanAnomalyEpoch":"0.2",
-		"epoch":"0.2",
+		"argOfPeriapsis":"139.2992571342065",
+		"ascNodeLongitude":"358.0125219248113",
+		"meanAnomalyEpoch":"4.060950472376478",
 		"color":"0.584, 0.501, 0.396, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -236,10 +226,9 @@
 		"semiMajorAxis":"177416873.8532",
 		"eccentricity":"0.007973319796896609",
 		"inclination":"0.192",
-		"argOfPeriapsis":"0.192",
-		"ascNodeLongitude":"0.192",
-		"meanAnomalyEpoch":"0.192",
-		"epoch":"0.192",
+		"argOfPeriapsis":"320.7359683492656",
+		"ascNodeLongitude":"358.5022563372704",
+		"meanAnomalyEpoch":"0.27604372240404196",
 		"color":"0.407, 0.341, 0.262, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -247,14 +236,14 @@
 	{
 		"name":"Saturn",
 		"radius":"5388585.4",
+		"atmosphereHeight":"1118000",
 		"geeASL":"1.065",
 		"semiMajorAxis":"134190879507.7481",
 		"eccentricity":"0.05347166506749872",
 		"inclination":"2.485",
-		"argOfPeriapsis":"2.485",
-		"ascNodeLongitude":"2.485",
-		"meanAnomalyEpoch":"2.485",
-		"epoch":"2.485",
+		"argOfPeriapsis":"85.04661202834268",
+		"ascNodeLongitude":"5.970845343832233",
+		"meanAnomalyEpoch":"1.1775536145636776",
 		"color":"0.917, 0.847, 0.709, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -266,10 +255,9 @@
 		"semiMajorAxis":"17518297.7889",
 		"eccentricity":"0.01776275223147744",
 		"inclination":"1.574",
-		"argOfPeriapsis":"1.574",
-		"ascNodeLongitude":"1.574",
-		"meanAnomalyEpoch":"1.574",
-		"epoch":"1.574",
+		"argOfPeriapsis":"222.2172789396715",
+		"ascNodeLongitude":"139.7604722490289",
+		"meanAnomalyEpoch":"2.1919760798055545",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -281,10 +269,9 @@
 		"semiMajorAxis":"22453729.4673",
 		"eccentricity":"0.006227897999957464",
 		"inclination":"0.009",
-		"argOfPeriapsis":"0.009",
-		"ascNodeLongitude":"0.009",
-		"meanAnomalyEpoch":"0.009",
-		"epoch":"0.009",
+		"argOfPeriapsis":"115.5615886062458",
+		"ascNodeLongitude":"128.4244161601446",
+		"meanAnomalyEpoch":"6.049837363294359",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -296,10 +283,9 @@
 		"semiMajorAxis":"27780510.6781",
 		"eccentricity":"0.001064868868083566",
 		"inclination":"1.12",
-		"argOfPeriapsis":"1.12",
-		"ascNodeLongitude":"1.12",
-		"meanAnomalyEpoch":"1.12",
-		"epoch":"1.12",
+		"argOfPeriapsis":"215.9196892523803",
+		"ascNodeLongitude":"119.2518388332899",
+		"meanAnomalyEpoch":"6.105565273654561",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -311,10 +297,9 @@
 		"semiMajorAxis":"35567023.1213",
 		"eccentricity":"0.001679230905502774",
 		"inclination":"0.019",
-		"argOfPeriapsis":"0.019",
-		"ascNodeLongitude":"0.019",
-		"meanAnomalyEpoch":"0.019",
-		"epoch":"0.019",
+		"argOfPeriapsis":"123.6717156049260",
+		"ascNodeLongitude":"128.5606071129818",
+		"meanAnomalyEpoch":"2.9308839134421727",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -326,10 +311,9 @@
 		"semiMajorAxis":"49652726.0979",
 		"eccentricity":"0.001168269515756326",
 		"inclination":"0.345",
-		"argOfPeriapsis":"0.345",
-		"ascNodeLongitude":"0.345",
-		"meanAnomalyEpoch":"0.345",
-		"epoch":"0.345",
+		"argOfPeriapsis":"172.7367089889645",
+		"ascNodeLongitude":"130.3670574820431",
+		"meanAnomalyEpoch":"0.23542531935505198",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -337,14 +321,14 @@
 	{
 		"name":"Titan",
 		"radius":"242352.6",
+		"atmosphereHeight":"84000",
 		"geeASL":"0.14",
 		"semiMajorAxis":"115084407.4695",
 		"eccentricity":"0.02891936561555365",
 		"inclination":"0.34854",
-		"argOfPeriapsis":"0.34854",
-		"ascNodeLongitude":"0.34854",
-		"meanAnomalyEpoch":"0.34854",
-		"epoch":"0.34854",
+		"argOfPeriapsis":"182.0886765021483",
+		"ascNodeLongitude":"126.4945233702913",
+		"meanAnomalyEpoch":"1.311809948776336",
 		"color":"0.7, 0.5, 0.25, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Laythe"
@@ -356,10 +340,9 @@
 		"semiMajorAxis":"335295026.655",
 		"eccentricity":"0.02880286281969610",
 		"inclination":"15.47",
-		"argOfPeriapsis":"15.47",
-		"ascNodeLongitude":"15.47",
-		"meanAnomalyEpoch":"15.47",
-		"epoch":"15.47",
+		"argOfPeriapsis":"314.3819081366686",
+		"ascNodeLongitude":"50.29392880240187",
+		"meanAnomalyEpoch":"2.4359269334587883",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -371,10 +354,9 @@
 		"semiMajorAxis":"268166615846.5519",
 		"eccentricity":"0.966611047747523",
 		"inclination":"159.7285829406219",
-		"argOfPeriapsis":"159.7285829406219",
-		"ascNodeLongitude":"159.7285829406219",
-		"meanAnomalyEpoch":"159.7285829406219",
-		"epoch":"159.7285829406219",
+		"argOfPeriapsis":"188.6163602812658",
+		"ascNodeLongitude":"131.7198903398914",
+		"meanAnomalyEpoch":"5.934119456780721",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Gilly"
@@ -382,14 +364,14 @@
 	{
 		"name":"Uranus",
 		"radius":"2326427",
+		"atmosphereHeight":"891000",
 		"geeASL":"0.904",
 		"semiMajorAxis":"269997443319.2668",
 		"eccentricity":"0.04620653158718433",
 		"inclination":"0.773",
-		"argOfPeriapsis":"0.773",
-		"ascNodeLongitude":"0.773",
-		"meanAnomalyEpoch":"0.773",
-		"epoch":"0.773",
+		"argOfPeriapsis":"169.6876790522249",
+		"ascNodeLongitude":"1.846089669223938",
+		"meanAnomalyEpoch":"5.006070925851672",
 		"color":"0.38, 0.58, 0.78, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -401,10 +383,9 @@
 		"semiMajorAxis":"12232063.2543",
 		"eccentricity":"0.00118741261963413",
 		"inclination":"4.232",
-		"argOfPeriapsis":"4.232",
-		"ascNodeLongitude":"4.232",
-		"meanAnomalyEpoch":"4.232",
-		"epoch":"4.232",
+		"argOfPeriapsis":"326.7575256535064",
+		"ascNodeLongitude":"169.0642120548280",
+		"meanAnomalyEpoch":"4.4156939860723",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -416,10 +397,9 @@
 		"semiMajorAxis":"17983081.9813",
 		"eccentricity":"0.00190951361476287",
 		"inclination":"0.26",
-		"argOfPeriapsis":"0.26",
-		"ascNodeLongitude":"0.26",
-		"meanAnomalyEpoch":"0.26",
-		"epoch":"0.26",
+		"argOfPeriapsis":"169.9966404991910",
+		"ascNodeLongitude":"166.5671084714081",
+		"meanAnomalyEpoch":"0.810944190678705",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -431,10 +411,9 @@
 		"semiMajorAxis":"25051079.3113",
 		"eccentricity":"0.0038334454580725",
 		"inclination":"0.128",
-		"argOfPeriapsis":"0.128",
-		"ascNodeLongitude":"0.128",
-		"meanAnomalyEpoch":"0.128",
-		"epoch":"0.128",
+		"argOfPeriapsis":"207.7259222157362",
+		"ascNodeLongitude":"166.5601075193709",
+		"meanAnomalyEpoch":"1.995350222525624",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -446,10 +425,9 @@
 		"semiMajorAxis":"41089911.750584197",
 		"eccentricity":"0.002486916",
 		"inclination":"0.34",
-		"argOfPeriapsis":"0.34",
-		"ascNodeLongitude":"0.34",
-		"meanAnomalyEpoch":"0.34",
-		"epoch":"0.34",
+		"argOfPeriapsis":"165.7455424030838",
+		"ascNodeLongitude":"166.6555214910122",
+		"meanAnomalyEpoch":"3.711534845860309",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Moho"
@@ -461,10 +439,9 @@
 		"semiMajorAxis":"54947761.1924",
 		"eccentricity":"0.00110558297330948",
 		"inclination":"0.058",
-		"argOfPeriapsis":"0.058",
-		"ascNodeLongitude":"0.058",
-		"meanAnomalyEpoch":"0.058",
-		"epoch":"0.058",
+		"argOfPeriapsis":"274.4599570542317",
+		"ascNodeLongitude":"166.6887328903476",
+		"meanAnomalyEpoch":"4.651563202426656",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -472,14 +449,14 @@
 	{
 		"name":"Neptune",
 		"radius":"2268318",
+		"atmosphereHeight":"688000",
 		"geeASL":"1.14",
 		"semiMajorAxis":"423569017970.5911",
 		"eccentricity":"0.008090397688364061",
 		"inclination":"1.77",
-		"argOfPeriapsis":"1.77",
-		"ascNodeLongitude":"1.77",
-		"meanAnomalyEpoch":"1.77",
-		"epoch":"1.77",
+		"argOfPeriapsis":"29.81485402991322",
+		"ascNodeLongitude":"3.512610711801178",
+		"meanAnomalyEpoch":"2.829170831890268",
 		"color":"0.19215, 0.33333, 0.56862, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -491,10 +468,9 @@
 		"semiMajorAxis":"33411870.742198597",
 		"eccentricity":"0.0001688014359763687",
 		"inclination":"156.885",
-		"argOfPeriapsis":"156.885",
-		"ascNodeLongitude":"156.885",
-		"meanAnomalyEpoch":"156.885",
-		"epoch":"156.885",
+		"argOfPeriapsis":"220.4523286895169",
+		"ascNodeLongitude":"197.1953239788069",
+		"meanAnomalyEpoch":"6.25973135910971",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Neptune",
 		"templateName":"Moho"
@@ -506,10 +482,9 @@
 		"semiMajorAxis":"550543475614.8261",
 		"eccentricity":"0.2462772488425983",
 		"inclination":"17.14",
-		"argOfPeriapsis":"17.14",
-		"ascNodeLongitude":"17.14",
-		"meanAnomalyEpoch":"17.14",
-		"epoch":"17.14",
+		"argOfPeriapsis":"184.4945352163909",
+		"ascNodeLongitude":"44.36099836994975",
+		"meanAnomalyEpoch":"5.238251980021541",
 		"color":"0.678, 0.568, 0.474, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Mun"
@@ -521,10 +496,9 @@
 		"semiMajorAxis":"1845563.555792425",
 		"eccentricity":"0.00005082225659448947",
 		"inclination":"0.08",
-		"argOfPeriapsis":"0.08",
-		"ascNodeLongitude":"0.08",
-		"meanAnomalyEpoch":"0.08",
-		"epoch":"0.08",
+		"argOfPeriapsis":"188.4738646852448",
+		"ascNodeLongitude":"222.4053735570010",
+		"meanAnomalyEpoch":"0.5393048609025978",
 		"color":"0.776, 0.698, 0.647, 1.0",
 		"referenceBody":"Pluto",
 		"templateName":"Mun"
