--- a/src/data/opm_configs.json
+++ b/src/data/opm_configs.json
@@ -21,9 +21,9 @@
 		"soi":"9646663",
 		"semiMajorAxis":"5263138304",
 		"eccentricity":"0.2",
-		"inclination":"0.12217304763960307",
-		"argOfPeriapsis":"0.2617993877991494",
-		"ascNodeLongitude":"1.2217304763960306",
+		"inclination":"7",
+		"argOfPeriapsis":"14.999999999999998",
+		"ascNodeLongitude":"70",
 		"meanAnomalyEpoch":"3.14",
 		"epoch":"0",
 		"color":"rgba(210,178,110,1)",
@@ -42,9 +42,9 @@
 		"soi":"85109365",
 		"semiMajorAxis":"9832684544",
 		"eccentricity":"0.01",
-		"inclination":"0.03665191429188092",
+		"inclination":"2.1",
 		"argOfPeriapsis":"0",
-		"ascNodeLongitude":"0.2617993877991494",
+		"ascNodeLongitude":"14.999999999999998",
 		"meanAnomalyEpoch":"3.14",
 		"epoch":"0",
 		"color":"rgba(200,160,240,1)",
@@ -62,9 +62,9 @@
 		"soi":"126123.27",
 		"semiMajorAxis":"31500000",
 		"eccentricity":"0.55",
-		"inclination":"0.20943951023931953",
-		"argOfPeriapsis":"0.17453292519943295",
-		"ascNodeLongitude":"1.3962634015954636",
+		"inclination":"12",
+		"argOfPeriapsis":"10",
+		"ascNodeLongitude":"80",
 		"meanAnomalyEpoch":"0.9",
 		"epoch":"0",
 		"color":"rgba(230,218,166,1)",
@@ -123,9 +123,9 @@
 		"soi":"2247428.4",
 		"semiMajorAxis":"47000000",
 		"eccentricity":"0",
-		"inclination":"0.10471975511965977",
-		"argOfPeriapsis":"0.6632251157578452",
-		"ascNodeLongitude":"1.361356816555577",
+		"inclination":"6",
+		"argOfPeriapsis":"38",
+		"ascNodeLongitude":"78",
 		"meanAnomalyEpoch":"0.9",
 		"epoch":"0",
 		"color":"rgba(160,254,176,1)",
@@ -144,9 +144,9 @@
 		"soi":"47921949",
 		"semiMajorAxis":"20726155264",
 		"eccentricity":"0.051",
-		"inclination":"0.0010471975511965976",
+		"inclination":"0.06",
 		"argOfPeriapsis":"0",
-		"ascNodeLongitude":"2.3649211364523164",
+		"ascNodeLongitude":"135.5",
 		"meanAnomalyEpoch":"3.14",
 		"epoch":"0",
 		"color":"rgba(254,66,30,1)",
@@ -164,7 +164,7 @@
 		"soi":"1049598.9",
 		"semiMajorAxis":"3200000",
 		"eccentricity":"0.03",
-		"inclination":"0.003490658503988659",
+		"inclination":"0.2",
 		"argOfPeriapsis":"0",
 		"ascNodeLongitude":"0",
 		"meanAnomalyEpoch":"1.7",
@@ -184,9 +184,9 @@
 		"soi":"32832840",
 		"semiMajorAxis":"40839348203",
 		"eccentricity":"0.145",
-		"inclination":"0.08726646259971647",
-		"argOfPeriapsis":"1.5707963267948966",
-		"ascNodeLongitude":"4.886921905584122",
+		"inclination":"5",
+		"argOfPeriapsis":"90",
+		"ascNodeLongitude":"280",
 		"meanAnomalyEpoch":"3.14",
 		"epoch":"0",
 		"color":"rgba(198,202,200,1)",
@@ -204,9 +204,9 @@
 		"soi":"2455985200",
 		"semiMajorAxis":"68773560320",
 		"eccentricity":"0.05",
-		"inclination":"0.022759093446006056",
+		"inclination":"1.304",
 		"argOfPeriapsis":"0",
-		"ascNodeLongitude":"0.9075712110370514",
+		"ascNodeLongitude":"52.00000000000001",
 		"meanAnomalyEpoch":"0.1",
 		"epoch":"0",
 		"color":"rgba(126,190,2,1)",
@@ -265,7 +265,7 @@
 		"soi":"10856518",
 		"semiMajorAxis":"68500000",
 		"eccentricity":"0",
-		"inclination":"0.0004363323129985824",
+		"inclination":"0.025",
 		"argOfPeriapsis":"0",
 		"ascNodeLongitude":"0",
 		"meanAnomalyEpoch":"3.14",
@@ -285,9 +285,9 @@
 		"soi":"1221060.9",
 		"semiMajorAxis":"128500000",
 		"eccentricity":"0.235",
-		"inclination":"0.2617993877991494",
-		"argOfPeriapsis":"0.4363323129985824",
-		"ascNodeLongitude":"0.17453292519943295",
+		"inclination":"14.999999999999998",
+		"argOfPeriapsis":"25",
+		"ascNodeLongitude":"10",
 		"meanAnomalyEpoch":"0.9",
 		"epoch":"0",
 		"color":"rgba(226,202,118,1)",
@@ -305,27 +305,15 @@
 		"soi":"1042138.9",
 		"semiMajorAxis":"179890000",
 		"eccentricity":"0.171",
-		"inclination":"0.07417649320975901",
-		"argOfPeriapsis":"0.2617993877991494",
-		"ascNodeLongitude":"0.03490658503988659",
+		"inclination":"4.25",
+		"argOfPeriapsis":"14.999999999999998",
+		"ascNodeLongitude":"2",
 		"meanAnomalyEpoch":"0.9",
 		"epoch":"0",
 		"color":"rgba(214,182,10,1)",
 		"referenceBody":"Jool",
 		"templateName":"Pol"
 	},
-    {
-        "name":"Eeloo",
-        "semiMajorAxis":"19105978",
-        "eccentricity":"0.0034",
-        "inclination":"2.3",
-        "argOfPeriapsis":"2.3",
-        "ascNodeLongitude":"2.3",
-        "meanAnomalyEpoch":"2.3",
-        "epoch":"2.3",
-        "referenceBody":"Sarnus",
-        "templateName":"Eeloo"
-    },
 	{
 		"name":"Sarnus",
 		"radius":"5300000",
@@ -334,10 +322,10 @@
 		"semiMajorAxis":"125798522368",
 		"eccentricity":"0.0534",
 		"inclination":"2.02",
-		"argOfPeriapsis":"2.02",
-		"ascNodeLongitude":"2.02",
-		"meanAnomalyEpoch":"2.02",
-		"epoch":"2.02",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"184",
+		"meanAnomalyEpoch":"2.88114666938782",
+		"epoch":"359.279999999964",
 		"color":"0.870588,0.721569,0.529412,1",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -345,14 +333,15 @@
 	{
 		"name":"Hale",
 		"radius":"6000",
+		"maxTerrainHeight":"5918",
 		"geeASL":"0.0023",
 		"semiMajorAxis":"10488231",
 		"eccentricity":"0",
 		"inclination":"1",
-		"argOfPeriapsis":"1",
-		"ascNodeLongitude":"1",
-		"meanAnomalyEpoch":"1",
-		"epoch":"1",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"55",
+		"meanAnomalyEpoch":"0",
+		"epoch":"0",
 		"color":"0.941176,0.901961,0.54902,1",
 		"referenceBody":"Sarnus",
 		"templateName":"Gilly"
@@ -360,14 +349,15 @@
 	{
 		"name":"Ovok",
 		"radius":"26000",
+		"maxTerrainHeight":"14000",
 		"geeASL":"0.002",
 		"semiMajorAxis":"12169413",
 		"eccentricity":"0.01",
 		"inclination":"1.5",
-		"argOfPeriapsis":"1.5",
-		"ascNodeLongitude":"1.5",
-		"meanAnomalyEpoch":"1.5",
-		"epoch":"1.5",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"55",
+		"meanAnomalyEpoch":"1.72",
+		"epoch":"751.7",
 		"color":"0.690196,0.768627,0.870588,1",
 		"referenceBody":"Sarnus",
 		"templateName":"Minmus"
@@ -375,14 +365,15 @@
 	{
 		"name":"Slate",
 		"radius":"540000",
+		"maxTerrainHeight":"16559",
 		"geeASL":"0.692",
 		"semiMajorAxis":"42592946",
 		"eccentricity":"0.04",
 		"inclination":"2.3",
-		"argOfPeriapsis":"2.3",
-		"ascNodeLongitude":"2.3",
-		"meanAnomalyEpoch":"2.3",
-		"epoch":"2.3",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"55",
+		"meanAnomalyEpoch":"1.1",
+		"epoch":"1343.91",
 		"color":"0.823529,0.705882,0.54902,1",
 		"referenceBody":"Sarnus",
 		"templateName":"Moho"
@@ -390,15 +381,16 @@
 	{
 		"name":"Tekto",
 		"radius":"280000",
+		"maxTerrainHeight":"5954",
 		"atmosphereHeight":"95000.0",
 		"geeASL":"0.2503",
 		"semiMajorAxis":"97355304",
 		"eccentricity":"0.028",
 		"inclination":"9.4",
-		"argOfPeriapsis":"9.4",
-		"ascNodeLongitude":"9.4",
-		"meanAnomalyEpoch":"9.4",
-		"epoch":"9.4",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"55",
+		"meanAnomalyEpoch":"2.1",
+		"epoch":"1275.12",
 		"color":"0.3,0.9,0.65,1",
 		"referenceBody":"Sarnus",
 		"templateName":"Laythe"
@@ -411,10 +403,10 @@
 		"semiMajorAxis":"254317012787",
 		"eccentricity":"0.045214674",
 		"inclination":"0.64",
-		"argOfPeriapsis":"0.64",
-		"ascNodeLongitude":"0.64",
-		"meanAnomalyEpoch":"0.64",
-		"epoch":"0.64",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"61",
+		"meanAnomalyEpoch":"5.59607362747192",
+		"epoch":"422.539999999906",
 		"color":"0.282353,0.819608,0.8,1",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -422,14 +414,15 @@
 	{
 		"name":"Polta",
 		"radius":"220000",
+		"maxTerrainHeight":"8835",
 		"geeASL":"0.19",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
 		"inclination":"2.45",
-		"argOfPeriapsis":"2.45",
-		"ascNodeLongitude":"2.45",
-		"meanAnomalyEpoch":"2.45",
-		"epoch":"2.45",
+		"argOfPeriapsis":"60",
+		"ascNodeLongitude":"40",
+		"meanAnomalyEpoch":"1.5209",
+		"epoch":"878.1399",
 		"color":"0.48235,0.62353,0.58039,1",
 		"referenceBody":"Urlum",
 		"templateName":"Moho"
@@ -437,14 +430,15 @@
 	{
 		"name":"Priax",
 		"radius":"74000",
+		"maxTerrainHeight":"30485",
 		"geeASL":"0.063",
 		"semiMajorAxis":"11727895",
 		"eccentricity":"0.0015",
 		"inclination":"2.5",
-		"argOfPeriapsis":"2.5",
-		"ascNodeLongitude":"2.5",
-		"meanAnomalyEpoch":"2.5",
-		"epoch":"2.5",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"40",
+		"meanAnomalyEpoch":"1.5209",
+		"epoch":"878.1399",
 		"color":"0.41961,0.41569,0.4,1",
 		"referenceBody":"Urlum",
 		"templateName":"Moho"
@@ -452,14 +446,15 @@
 	{
 		"name":"Wal",
 		"radius":"370000",
+		"maxTerrainHeight":"20650",
 		"geeASL":"0.37",
 		"semiMajorAxis":"67553668",
 		"eccentricity":"0.023",
 		"inclination":"1.9",
-		"argOfPeriapsis":"1.9",
-		"ascNodeLongitude":"1.9",
-		"meanAnomalyEpoch":"1.9",
-		"epoch":"1.9",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"40",
+		"meanAnomalyEpoch":"2.9615",
+		"epoch":"1078.179",
 		"color":"0.72157,0.60392,0.38824,1",
 		"referenceBody":"Urlum",
 		"templateName":"Moho"
@@ -467,14 +462,15 @@
 	{
 		"name":"Tal",
 		"radius":"22000",
+		"maxTerrainHeight":"11904",
 		"geeASL":"0.045",
 		"semiMajorAxis":"3109163",
 		"eccentricity":"0",
 		"inclination":"1.9",
-		"argOfPeriapsis":"1.9",
-		"ascNodeLongitude":"1.9",
-		"meanAnomalyEpoch":"1.9",
-		"epoch":"1.9",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"40",
+		"meanAnomalyEpoch":"0",
+		"epoch":"1179.579",
 		"color":"0.4,0.36078,0.29020,1",
 		"referenceBody":"Wal",
 		"templateName":"Moho"
@@ -487,10 +483,10 @@
 		"semiMajorAxis":"409355191706",
 		"eccentricity":"0.0127567",
 		"inclination":"1.27",
-		"argOfPeriapsis":"1.27",
-		"ascNodeLongitude":"1.27",
-		"meanAnomalyEpoch":"1.27",
-		"epoch":"1.27",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"259",
+		"meanAnomalyEpoch":"2.27167344093323",
+		"epoch":"99.6799999999973",
 		"color":"0.415686,0.352941,0.803922,1",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -498,15 +494,16 @@
 	{
 		"name":"Thatmo",
 		"radius":"286000",
+		"maxTerrainHeight":"4981",
 		"atmosphereHeight":"35000.0",
 		"geeASL":"0.232",
 		"semiMajorAxis":"32300895",
 		"eccentricity":"0.00043",
 		"inclination":"161.1",
-		"argOfPeriapsis":"161.1",
-		"ascNodeLongitude":"161.1",
-		"meanAnomalyEpoch":"161.1",
-		"epoch":"161.1",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"66",
+		"meanAnomalyEpoch":"2.04731106758118",
+		"epoch":"1953406.32967385",
 		"color":"0.901961,0.901961,0.980392,1",
 		"referenceBody":"Neidon",
 		"templateName":"Moho"
@@ -514,14 +511,15 @@
 	{
 		"name":"Nissee",
 		"radius":"30000",
+		"maxTerrainHeight":"9113",
 		"geeASL":"0.045",
 		"semiMajorAxis":"487743514",
 		"eccentricity":"0.72",
 		"inclination":"29.56",
-		"argOfPeriapsis":"29.56",
-		"ascNodeLongitude":"29.56",
-		"meanAnomalyEpoch":"29.56",
-		"epoch":"29.56",
+		"argOfPeriapsis":"0",
+		"ascNodeLongitude":"66",
+		"meanAnomalyEpoch":"2.04731106758118",
+		"epoch":"1953406.32967385",
 		"color":"0.823529,0.705882,0.54902,1",
 		"referenceBody":"Neidon",
 		"templateName":"Moho"
@@ -529,14 +527,15 @@
 	{
 		"name":"Plock",
 		"radius":"189000",
+		"maxTerrainHeight":"3383",
 		"geeASL":"0.148",
 		"semiMajorAxis":"535833706086",
 		"eccentricity":"0.26",
 		"inclination":"6.15",
-		"argOfPeriapsis":"6.15",
-		"ascNodeLongitude":"6.15",
-		"meanAnomalyEpoch":"6.15",
-		"epoch":"6.15",
+		"argOfPeriapsis":"50",
+		"ascNodeLongitude":"260",
+		"meanAnomalyEpoch":"0",
+		"epoch":"213",
 		"color":"RGBA(130, 123, 83, 255)",
 		"referenceBody":"Sun",
 		"templateName":"Moho"
@@ -544,14 +543,15 @@
 	{
 		"name":"Karen",
 		"radius":"85050",
+		"maxTerrainHeight":"4655",
 		"geeASL":"0.066",
 		"semiMajorAxis":"2457800",
 		"eccentricity":"0",
 		"inclination":"0",
-		"argOfPeriapsis":"0",
-		"ascNodeLongitude":"0",
+		"argOfPeriapsis":"50",
+		"ascNodeLongitude":"260",
 		"meanAnomalyEpoch":"0",
-		"epoch":"0",
+		"epoch":"213",
 		"color":"RGBA(101, 56, 54, 255)",
 		"referenceBody":"Plock",
 		"templateName":"Moho"
