--- a/src/data/rss_configs.json
+++ b/src/data/rss_configs.json
@@ -13,10 +13,9 @@
 		"semiMajorAxis":"57908973645.88802",
 		"eccentricity":"0.2056187266319207",
 		"inclination":"28.60252108855048",
-		"argOfPeriapsis":"28.60252108855048",
-		"ascNodeLongitude":"28.60252108855048",
-		"meanAnomalyEpoch":"28.60252108855048",
-		"epoch":"28.60252108855048",
+		"argOfPeriapsis":"66.90371044151551",
+		"ascNodeLongitude":"10.86541167564728",
+		"meanAnomalyEpoch":"5.553920558995985",
 		"color":"0.321, 0.317, 0.352, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Mun"
@@ -25,14 +24,14 @@
 		"flightGlobalsIndex":"3",
 		"name":"Venus",
 		"radius":"6049000",
+		"atmosphereHeight":"145000.0",
 		"stdGravParam":"3.2485859200000006e+14",
 		"semiMajorAxis":"108209548790.4671",
 		"eccentricity":"0.006810339650842032",
 		"inclination":"24.46397633556437",
-		"argOfPeriapsis":"24.46397633556437",
-		"ascNodeLongitude":"24.46397633556437",
-		"meanAnomalyEpoch":"24.46397633556437",
-		"epoch":"24.46397633556437",
+		"argOfPeriapsis":"123.7121294282329",
+		"ascNodeLongitude":"7.981603378781639",
+		"meanAnomalyEpoch":"5.432267392125204",
 		"color":"0.701, 0.384, 0.16, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Duna"
@@ -41,14 +40,14 @@
 		"flightGlobalsIndex":"1",
 		"name":"Earth",
 		"radius":"6371000",
+		"atmosphereHeight":"140000.0",
 		"stdGravParam":"3.9860043543609598e+14",
 		"semiMajorAxis":"149598261150.4425",
 		"eccentricity":"0.01609636160505683",
 		"inclination":"23.44603795469773",
-		"argOfPeriapsis":"23.44603795469773",
-		"ascNodeLongitude":"23.44603795469773",
-		"meanAnomalyEpoch":"23.44603795469773",
-		"epoch":"23.44603795469773",
+		"argOfPeriapsis":"102.9720683296131",
+		"ascNodeLongitude":"359.9965004168758",
+		"meanAnomalyEpoch":"6.231885654519576",
 		"color":"0.0,0.278,0.388,1.0",
 		"referenceBody":"Sun",
 		"templateName":"Kerbin"
@@ -61,10 +60,9 @@
 		"semiMajorAxis":"384308437.7707066",
 		"eccentricity":"0.05328149353682574",
 		"inclination":"28.36267790798491",
-		"argOfPeriapsis":"28.36267790798491",
-		"ascNodeLongitude":"28.36267790798491",
-		"meanAnomalyEpoch":"28.36267790798491",
-		"epoch":"28.36267790798491",
+		"argOfPeriapsis":"199.7640930160823",
+		"ascNodeLongitude":"2.296616161126016",
+		"meanAnomalyEpoch":"3.8868698006324554",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Earth",
 		"templateName":"Mun"
@@ -73,14 +71,14 @@
 		"flightGlobalsIndex":"11",
 		"name":"Mars",
 		"radius":"3375800",
+		"atmosphereHeight":"125000.0",
 		"stdGravParam":"4.282837362069909E+13",
 		"semiMajorAxis":"227949699961.9763",
 		"eccentricity":"0.09326110278323557",
 		"inclination":"24.69272426910055",
-		"argOfPeriapsis":"24.69272426910055",
-		"ascNodeLongitude":"24.69272426910055",
-		"meanAnomalyEpoch":"24.69272426910055",
-		"epoch":"24.69272426910055",
+		"argOfPeriapsis":"332.1022655295414",
+		"ascNodeLongitude":"3.351911063089117",
+		"meanAnomalyEpoch":"2.9564361325350452",
 		"color":"0.631, 0.388, 0.192, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Duna"
@@ -93,10 +91,9 @@
 		"semiMajorAxis":"9378492.209088314",
 		"eccentricity":"0.01539938155583979",
 		"inclination":"36.32433410471867",
-		"argOfPeriapsis":"36.32433410471867",
-		"ascNodeLongitude":"36.32433410471867",
-		"meanAnomalyEpoch":"36.32433410471867",
-		"epoch":"36.32433410471867",
+		"argOfPeriapsis":"357.7759243021914",
+		"ascNodeLongitude":"46.48212553464923",
+		"meanAnomalyEpoch":"0.12540401573484683",
 		"color":"0.56, 0.454, 0.388, 1.0",
 		"referenceBody":"Mars",
 		"templateName":"Bop"
@@ -109,10 +106,9 @@
 		"semiMajorAxis":"23458112.01759387",
 		"eccentricity":"0.0003294680798661700",
 		"inclination":"38.2773701383231",
-		"argOfPeriapsis":"38.2773701383231",
-		"ascNodeLongitude":"38.2773701383231",
-		"meanAnomalyEpoch":"38.2773701383231",
-		"epoch":"38.2773701383231",
+		"argOfPeriapsis":"263.8963868784089",
+		"ascNodeLongitude":"47.51893570799763",
+		"meanAnomalyEpoch":"5.646210530657005",
 		"color":"0.462, 0.372, 0.313, 1.0",
 		"referenceBody":"Mars",
 		"templateName":"Bop"
@@ -125,10 +121,9 @@
 		"semiMajorAxis":"353346223803.158",
 		"eccentricity":"0.0902068412255369",
 		"inclination":"22.7696439720361",
-		"argOfPeriapsis":"22.7696439720361",
-		"ascNodeLongitude":"22.7696439720361",
-		"meanAnomalyEpoch":"22.7696439720361",
-		"epoch":"22.7696439720361",
+		"argOfPeriapsis":"236.445369158826",
+		"ascNodeLongitude":"18.1671232653234",
+		"meanAnomalyEpoch":"1.0657102610896119",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Eeloo"
@@ -141,10 +136,9 @@
 		"semiMajorAxis":"413738762313.173",
 		"eccentricity":"0.079363494880566",
 		"inclination":"27.1273394923134",
-		"argOfPeriapsis":"27.1273394923134",
-		"ascNodeLongitude":"27.1273394923134",
-		"meanAnomalyEpoch":"27.1273394923134",
-		"epoch":"27.1273394923134",
+		"argOfPeriapsis":"129.19102663711",
+		"ascNodeLongitude":"23.4501727740666",
+		"meanAnomalyEpoch":"1.0500332058738224",
 		"color":"0.5, 0.5, 0.5, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Eeloo"
@@ -153,14 +147,14 @@
 		"flightGlobalsIndex":"5",
 		"name":"Jupiter",
 		"radius":"69373000",
+		"atmosphereHeight":"1550000.0",
 		"stdGravParam":"1.266865349218008E+17",
 		"semiMajorAxis":"778188938659.7554",
 		"eccentricity":"0.04872660654702194",
 		"inclination":"23.25313306947884",
-		"argOfPeriapsis":"23.25313306947884",
-		"ascNodeLongitude":"23.25313306947884",
-		"meanAnomalyEpoch":"23.25313306947884",
-		"epoch":"23.25313306947884",
+		"argOfPeriapsis":"10.75642751202877",
+		"ascNodeLongitude":"3.262077289923354",
+		"meanAnomalyEpoch":"5.281038885954535",
 		"color":"0.749, 0.592, 0.4, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -173,10 +167,9 @@
 		"semiMajorAxis":"422018294.5236953",
 		"eccentricity":"0.003545858426216978",
 		"inclination":"25.46409538664874",
-		"argOfPeriapsis":"25.46409538664874",
-		"ascNodeLongitude":"25.46409538664874",
-		"meanAnomalyEpoch":"25.46409538664874",
-		"epoch":"25.46409538664874",
+		"argOfPeriapsis":"231.2703460977786",
+		"ascNodeLongitude":"358.0466431678460",
+		"meanAnomalyEpoch":"3.4091064061869685",
 		"color":"0.647, 0.631, 0.364, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -189,10 +182,9 @@
 		"semiMajorAxis":"671253637.5417169",
 		"eccentricity":"0.009511727119926178",
 		"inclination":"25.70364276471991",
-		"argOfPeriapsis":"25.70364276471991",
-		"ascNodeLongitude":"25.70364276471991",
-		"meanAnomalyEpoch":"25.70364276471991",
-		"epoch":"25.70364276471991",
+		"argOfPeriapsis":"53.13210737539627",
+		"ascNodeLongitude":"358.9360081847504",
+		"meanAnomalyEpoch":"4.821737415499958",
 		"color":"0.776, 0.78, 0.678, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Mun"
@@ -205,10 +197,9 @@
 		"semiMajorAxis":"1070823468.894524",
 		"eccentricity":"0.001190086418361844",
 		"inclination":"25.27071366962049",
-		"argOfPeriapsis":"25.27071366962049",
-		"ascNodeLongitude":"25.27071366962049",
-		"meanAnomalyEpoch":"25.27071366962049",
-		"epoch":"25.27071366962049",
+		"argOfPeriapsis":"139.2992571342065",
+		"ascNodeLongitude":"358.0125219248113",
+		"meanAnomalyEpoch":"4.060950472376478",
 		"color":"0.584, 0.501, 0.396, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Mun"
@@ -221,10 +212,9 @@
 		"semiMajorAxis":"1883812366.573522",
 		"eccentricity":"0.007973319796896609",
 		"inclination":"25.44080019822134",
-		"argOfPeriapsis":"25.44080019822134",
-		"ascNodeLongitude":"25.44080019822134",
-		"meanAnomalyEpoch":"25.44080019822134",
-		"epoch":"25.44080019822134",
+		"argOfPeriapsis":"320.7359683492656",
+		"ascNodeLongitude":"358.5022563372704",
+		"meanAnomalyEpoch":"0.27604372240404196",
 		"color":"0.407, 0.341, 0.262, 1.0",
 		"referenceBody":"Jupiter",
 		"templateName":"Moho"
@@ -233,14 +223,14 @@
 		"flightGlobalsIndex":"14",
 		"name":"Saturn",
 		"radius":"57216000",
+		"atmosphereHeight":"2000000.0",
 		"stdGravParam":"3.793120749865224E+16",
 		"semiMajorAxis":"1424838758613.269",
 		"eccentricity":"0.05347166506749872",
 		"inclination":"22.56992281132335",
-		"argOfPeriapsis":"22.56992281132335",
-		"ascNodeLongitude":"22.56992281132335",
-		"meanAnomalyEpoch":"22.56992281132335",
-		"epoch":"22.56992281132335",
+		"argOfPeriapsis":"85.04661202834268",
+		"ascNodeLongitude":"5.970845343832233",
+		"meanAnomalyEpoch":"1.1775536145636776",
 		"color":"0.917, 0.847, 0.709, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -253,10 +243,9 @@
 		"semiMajorAxis":"186009285.9220490",
 		"eccentricity":"0.01776275223147744",
 		"inclination":"1.572",
-		"argOfPeriapsis":"1.572",
-		"ascNodeLongitude":"1.572",
-		"meanAnomalyEpoch":"1.572",
-		"epoch":"1.572",
+		"argOfPeriapsis":"222.2172789396715",
+		"ascNodeLongitude":"139.7604722490289",
+		"meanAnomalyEpoch":"2.1919760798055545",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -269,10 +258,9 @@
 		"semiMajorAxis":"238413699.4838728",
 		"eccentricity":"0.006227897999957464",
 		"inclination":"0.009",
-		"argOfPeriapsis":"0.009",
-		"ascNodeLongitude":"0.009",
-		"meanAnomalyEpoch":"0.009",
-		"epoch":"0.009",
+		"argOfPeriapsis":"115.5615886062458",
+		"ascNodeLongitude":"128.4244161601446",
+		"meanAnomalyEpoch":"6.049837363294359",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -285,10 +273,9 @@
 		"semiMajorAxis":"294973462.3804425",
 		"eccentricity":"0.001064868868083566",
 		"inclination":"1.091",
-		"argOfPeriapsis":"1.091",
-		"ascNodeLongitude":"1.091",
-		"meanAnomalyEpoch":"1.091",
-		"epoch":"1.091",
+		"argOfPeriapsis":"215.9196892523803",
+		"ascNodeLongitude":"119.2518388332899",
+		"meanAnomalyEpoch":"6.105565273654561",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -301,10 +288,9 @@
 		"semiMajorAxis":"377650651.5017090",
 		"eccentricity":"0.001679230905502774",
 		"inclination":"0.028",
-		"argOfPeriapsis":"0.028",
-		"ascNodeLongitude":"0.028",
-		"meanAnomalyEpoch":"0.028",
-		"epoch":"0.028",
+		"argOfPeriapsis":"123.6717156049260",
+		"ascNodeLongitude":"128.5606071129818",
+		"meanAnomalyEpoch":"2.9308839134421727",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -317,10 +303,9 @@
 		"semiMajorAxis":"527212645.7071990",
 		"eccentricity":"0.001168269515756326",
 		"inclination":"0.331",
-		"argOfPeriapsis":"0.331",
-		"ascNodeLongitude":"0.331",
-		"meanAnomalyEpoch":"0.331",
-		"epoch":"0.331",
+		"argOfPeriapsis":"172.7367089889645",
+		"ascNodeLongitude":"130.3670574820431",
+		"meanAnomalyEpoch":"0.23542531935505198",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -329,14 +314,14 @@
 		"flightGlobalsIndex":"6",
 		"name":"Titan",
 		"radius":"2573300",
+		"atmosphereHeight":"600000.0",
 		"stdGravParam":"8.9778648e+12",
 		"semiMajorAxis":"1221966238.511425",
 		"eccentricity":"0.02891936561555365",
 		"inclination":"6.460492679775526",
-		"argOfPeriapsis":"6.460492679775526",
-		"ascNodeLongitude":"6.460492679775526",
-		"meanAnomalyEpoch":"6.460492679775526",
-		"epoch":"6.460492679775526",
+		"argOfPeriapsis":"182.0886765021483",
+		"ascNodeLongitude":"126.4945233702913",
+		"meanAnomalyEpoch":"1.311809948776336",
 		"color":"0.7, 0.5, 0.25, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Laythe"
@@ -349,10 +334,9 @@
 		"semiMajorAxis":"3560162593.022970",
 		"eccentricity":"0.02880286281969610",
 		"inclination":"7.489",
-		"argOfPeriapsis":"7.489",
-		"ascNodeLongitude":"7.489",
-		"meanAnomalyEpoch":"7.489",
-		"epoch":"7.489",
+		"argOfPeriapsis":"314.3819081366686",
+		"ascNodeLongitude":"50.29392880240187",
+		"meanAnomalyEpoch":"2.4359269334587883",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Saturn",
 		"templateName":"Mun"
@@ -361,14 +345,14 @@
 		"flightGlobalsIndex":"21",
 		"name":"Uranus",
 		"radius":"24702000",
+		"atmosphereHeight":"1400000.0",
 		"stdGravParam":"5.793951322279009E+15",
 		"semiMajorAxis":"2866832853163.975",
 		"eccentricity":"0.04620653158718433",
 		"inclination":"23.67256993343676",
-		"argOfPeriapsis":"23.67256993343676",
-		"ascNodeLongitude":"23.67256993343676",
-		"meanAnomalyEpoch":"23.67256993343676",
-		"epoch":"23.67256993343676",
+		"argOfPeriapsis":"169.6876790522249",
+		"ascNodeLongitude":"1.846089669223938",
+		"meanAnomalyEpoch":"5.006070925851672",
 		"color":"0.38, 0.58, 0.78, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -381,10 +365,9 @@
 		"semiMajorAxis":"129880047.634175",
 		"eccentricity":"0.00118741261963413",
 		"inclination":"78.5887546839913",
-		"argOfPeriapsis":"78.5887546839913",
-		"ascNodeLongitude":"78.5887546839913",
-		"meanAnomalyEpoch":"78.5887546839913",
-		"epoch":"78.5887546839913",
+		"argOfPeriapsis":"326.7575256535064",
+		"ascNodeLongitude":"169.0642120548280",
+		"meanAnomalyEpoch":"4.4156939860723",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -397,10 +380,9 @@
 		"semiMajorAxis":"190944364.477622",
 		"eccentricity":"0.00190951361476287",
 		"inclination":"74.8989043025419",
-		"argOfPeriapsis":"74.8989043025419",
-		"ascNodeLongitude":"74.8989043025419",
-		"meanAnomalyEpoch":"74.8989043025419",
-		"epoch":"74.8989043025419",
+		"argOfPeriapsis":"169.9966404991910",
+		"ascNodeLongitude":"166.5671084714081",
+		"meanAnomalyEpoch":"0.810944190678705",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -413,10 +395,9 @@
 		"semiMajorAxis":"265992360.127656",
 		"eccentricity":"0.0038334454580725",
 		"inclination":"74.9939984108702",
-		"argOfPeriapsis":"74.9939984108702",
-		"ascNodeLongitude":"74.9939984108702",
-		"meanAnomalyEpoch":"74.9939984108702",
-		"epoch":"74.9939984108702",
+		"argOfPeriapsis":"207.7259222157362",
+		"ascNodeLongitude":"166.5601075193709",
+		"meanAnomalyEpoch":"1.995350222525624",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -429,10 +410,9 @@
 		"semiMajorAxis":"436292682.967703",
 		"eccentricity":"0.002486916",
 		"inclination":"75.045766393",
-		"argOfPeriapsis":"75.045766393",
-		"ascNodeLongitude":"75.045766393",
-		"meanAnomalyEpoch":"75.045766393",
-		"epoch":"75.045766393",
+		"argOfPeriapsis":"165.7455424030838",
+		"ascNodeLongitude":"166.6555214910122",
+		"meanAnomalyEpoch":"3.711534845860309",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -445,10 +425,9 @@
 		"semiMajorAxis":"583435328.340603",
 		"eccentricity":"0.00110558297330948",
 		"inclination":"74.9349049752716",
-		"argOfPeriapsis":"74.9349049752716",
-		"ascNodeLongitude":"74.9349049752716",
-		"meanAnomalyEpoch":"74.9349049752716",
-		"epoch":"74.9349049752716",
+		"argOfPeriapsis":"274.4599570542317",
+		"ascNodeLongitude":"166.6887328903476",
+		"meanAnomalyEpoch":"4.651563202426656",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Uranus",
 		"templateName":"Eeloo"
@@ -457,14 +436,14 @@
 		"flightGlobalsIndex":"22",
 		"name":"Neptune",
 		"radius":"24085000",
+		"atmosphereHeight":"1250000.0",
 		"stdGravParam":"6.835099502439672E+15",
 		"semiMajorAxis":"4497455832811.736",
 		"eccentricity":"0.008090397688364061",
 		"inclination":"22.30735942964904",
-		"argOfPeriapsis":"22.30735942964904",
-		"ascNodeLongitude":"22.30735942964904",
-		"meanAnomalyEpoch":"22.30735942964904",
-		"epoch":"22.30735942964904",
+		"argOfPeriapsis":"29.81485402991322",
+		"ascNodeLongitude":"3.512610711801178",
+		"meanAnomalyEpoch":"2.829170831890268",
 		"color":"0.19215, 0.33333, 0.56862, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Jool"
@@ -473,14 +452,14 @@
 		"flightGlobalsIndex":"23",
 		"name":"Triton",
 		"radius":"1353400",
+		"atmosphereHeight":"110000.0",
 		"stdGravParam":"1.427598140725034E+12",
 		"semiMajorAxis":"354767243.5406647",
 		"eccentricity":"0.0001688014359763687",
 		"inclination":"156.834",
-		"argOfPeriapsis":"156.834",
-		"ascNodeLongitude":"156.834",
-		"meanAnomalyEpoch":"156.834",
-		"epoch":"156.834",
+		"argOfPeriapsis":"220.4523286895169",
+		"ascNodeLongitude":"197.1953239788069",
+		"meanAnomalyEpoch":"6.25973135910971",
 		"color":"1.0, 1.0, 1.0, 1.0",
 		"referenceBody":"Neptune",
 		"templateName":"Mun"
@@ -489,14 +468,14 @@
 		"flightGlobalsIndex":"24",
 		"name":"Pluto",
 		"radius":"1187000",
+		"atmosphereHeight":"110000.0",
 		"stdGravParam":"8.696138177608748e+11",
 		"semiMajorAxis":"5845670624078.223",
 		"eccentricity":"0.2462772488425983",
 		"inclination":"23.61236405752844",
-		"argOfPeriapsis":"23.61236405752844",
-		"ascNodeLongitude":"23.61236405752844",
-		"meanAnomalyEpoch":"23.61236405752844",
-		"epoch":"23.61236405752844",
+		"argOfPeriapsis":"184.4945352163909",
+		"ascNodeLongitude":"44.36099836994975",
+		"meanAnomalyEpoch":"5.238251980021541",
 		"color":"0.678, 0.568, 0.474, 1.0",
 		"referenceBody":"Sun",
 		"templateName":"Mun"
@@ -509,10 +488,9 @@
 		"semiMajorAxis":"19596193.83540397",
 		"eccentricity":"0.00005082225659448947",
 		"inclination":"0.001",
-		"argOfPeriapsis":"0.001",
-		"ascNodeLongitude":"0.001",
-		"meanAnomalyEpoch":"0.001",
-		"epoch":"0.001",
+		"argOfPeriapsis":"188.4738646852448",
+		"ascNodeLongitude":"222.4053735570010",
+		"meanAnomalyEpoch":"0.5393048609025978",
 		"color":"0.776, 0.698, 0.647, 1.0",
 		"referenceBody":"Pluto",
 		"templateName":"Mun"
